--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@metadrive/lib": "^0.1.5",
     "@metadrive/typechain-types": "^0.1.9",
     "@metamask/eth-sig-util": "^4.0.1",
+    "@rainbow-me/rainbowkit": "^0.11.0",
     "@types/file-saver": "^2.0.5",
     "bip39": "^3.0.4",
     "ethers": "^5.6.9",
@@ -29,6 +30,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "wagmi": "^0.11.7",
     "web3.storage": "^4.3.0"
   },
   "devDependencies": {
